k8s_uebungen/5_configmap_secret/h2_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: h2-db
spec:
  selector:
    app: h2-db
  ports:
    - port: 1521
      targetPort: 1521
  type: ClusterIP
