k8s_uebungen/5_configmap_secret/app_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: userX.k8s-schulung.cloud.viadee.de
      http:
        paths:
          - backend:
              serviceName: demo-app
              servicePort: 80
